# QWarhammerSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_clang_format.py
.github/workflows/: cmake.yml
QWarhammerSimulator/: CMakeLists.txt  commandpanel.cpp  commandpanel.hpp  header.cpp  header.hpp  iscreeneventhanlder.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  playerheader.cpp  playerheader.hpp  screen.cpp  screen.hpp  screeneventhanlderfactory.cpp  screeneventhanlderfactory.hpp  selection.hpp  statswidget.cpp  statswidget.hpp  unitindex.hpp  utils.cpp  utils.hpp
QWarhammerSimulator/phase_specific_command_panel/: shooting_command_panel.cpp  shooting_command_panel.hpp
QWarhammerSimulator/screen_event_handler/: iscreeneventhanlder.hpp  screeneventhanlderfactory.cpp  screeneventhanlderfactory.hpp  shooting.cpp  shooting.hpp
libs/: CMakeLists.txt
libs/libgeometry/: CMakeLists.txt  point.cpp  point.hpp  rectangle.cpp  rectangle.hpp  utils.cpp  utils.hpp
libs/libutils/: CMakeLists.txt  monadicpointer.hpp
libs/libwarhammerengine/: CMakeLists.txt  army.hpp  characteristics.cpp  characteristics.hpp  game.cpp  game.hpp  gameboard.hpp  model.hpp  turnphase.hpp  turnphasemanager.cpp  turnphasemanager.hpp  unit.cpp  unit.hpp
unit_tests/: CMakeLists.txt  custom_matchers.cpp  custom_matchers.hpp  test_monadic_pointer.cpp  test_rectangle.cpp  test_rectanlge.cpp  test_turnphase.cpp  test_unit.cpp
