set(LIBRARY_TARGET_NAME LibUtils)

set(LIB_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
set(LIB_REST_SERVER_ALL_HDR "monadicpointer.hpp")

add_library(${LIBRARY_TARGET_NAME} INTERFACE)

add_library(${PROJECT_NAME}::${LIBRARY_TARGET_NAME} ALIAS ${LIBRARY_TARGET_NAME})

set_target_properties(${LIBRARY_TARGET_NAME} PROPERTIES PUBLIC_HEADER "${LIB_REST_SERVER_ALL_HDR}")

target_include_directories(${LIBRARY_TARGET_NAME} INTERFACE 
    "$<BUILD_INTERFACE:${LIB_ROOT_DIRECTORY}>" 
    "$<BUILD_INTERFACE:${}>" 
    "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>"
)

target_link_libraries(${LIBRARY_TARGET_NAME} INTERFACE CONAN_PKG::boost)

message(STATUS "Created target ${LIBRARY_TARGET_NAME} for export ${PROJECT_NAME}.")
